--- a/_posts/Year 1/2020-04-13-Week-9.md
+++ b/_posts/Year 1/2020-04-13-Week-9.md
@@ -7,9 +7,6 @@ tags: [short story]
 ---
 In a dying world where disabled people are hunted and killed, an 8 year old boy looks for an escape.
 
-
-
-
 <p>Week 9: 04/13/2021:</p>
 - <p><a href="https://drive.google.com/file/d/1j47bZtdIGcRn2UzmJoMAkvcrDROYmdNh/view?usp=sharing">
 The Paradigm Shift: Prologue.pdf</a></p>
@@ -26,9 +23,4 @@ The Paradigm Shift: Prologue.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/view?usp=sharing">The Paradigm Shift Complete PDF</a></p>
 
 Or view the complete story below: 
-<!-- <embed src="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
-
-
+<iframe src="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/preview" width="640" height="480" allow="autoplay"></iframe>
