--- a/_posts/Year 1/2020-06-08-Week-17.md
+++ b/_posts/Year 1/2020-06-08-Week-17.md
@@ -31,8 +31,4 @@ Grievances of the Poor: The Upper Class.pdf</a></p>
 Grievances of the Poor.pdf</a></p>
 
 Or view the compiled story below: 
-<!-- <embed src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
-
+<iframe src="https://drive.google.com/file/d/1QLN6pZO463aRhtZ81UH_Sjhy0q9Hm6ye/preview" width="640" height="480" allow="autoplay"></iframe>
