--- a/_posts/Year 1/2020-08-03-Week-25.md
+++ b/_posts/Year 1/2020-08-03-Week-25.md
@@ -8,9 +8,6 @@ tags: [screenplay]
 Human race under the thumb of alien oppressors launches one last rebellion.
 
 
-
-
-
 <p>Week 25: 08/03/2020:</p>
 - <p><a href="https://drive.google.com/file/d/1aNtoMZfNBUlNawzXgWmA8NWy33FmWhLI/view?usp=sharing">
 On the Other Side of the Fence: Teaser.pdf</a></p>
@@ -31,7 +28,4 @@ On the Other Side of the Fence: Act 3: Broken Mirrors.pdf</a></p>
 On the Other Side of the Fence complete script.pdf</a></p>
 
 Or view the compiled story below: 
-<!-- <embed src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1epD_4j4VIFt9nllijQQSII6bgvTMqXt9/preview" width="640" height="480" allow="autoplay"></iframe>
