--- a/_posts/Year 1/2020-10-12-Week-35.md
+++ b/_posts/Year 1/2020-10-12-Week-35.md
@@ -5,16 +5,11 @@ author: Mohammad Khan
 category: [Short Story]
 tags: [short story]
 ---
-In world of superpowered people, a normal person hunts for more power
+In world of superpowered people, a normal person craves for power
 
 
 <p><a href="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing">
 Superpower.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
-
-
+<iframe src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/preview" width="640" height="480" allow="autoplay"></iframe>
