--- a/_posts/Year 1/2020-10-26-Week-37.md
+++ b/_posts/Year 1/2020-10-26-Week-37.md
@@ -12,7 +12,4 @@ An ordinary man stuck in an ordinary world looks for meaning for his existence.
 Just Some Guy.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1OhBPw90csiGjkwbhcw_K54oioeT5RNrd/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1OhBPw90csiGjkwbhcw_K54oioeT5RNrd/preview" width="640" height="480" allow="autoplay"></iframe>
