--- a/_posts/Year 1/2020-11-09-Week-39.md
+++ b/_posts/Year 1/2020-11-09-Week-39.md
@@ -5,15 +5,11 @@ author: Mohammad Khan
 category: [Short Story]
 tags: [short story]
 ---
-A lone asteroid floating in space yearns to feel valued.
-
+A lone asteroid floating in space yearns to make an impact.
 
 
 <p><a href="https://drive.google.com/file/d/1t2ydE8CzL9feRxN9b22nton036IEhg9J/view?usp=sharing">
 Impact.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1t2ydE8CzL9feRxN9b22nton036IEhg9J/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1t2ydE8CzL9feRxN9b22nton036IEhg9J/preview" width="640" height="480" allow="autoplay"></iframe>
