--- a/_posts/Year 1/2020-11-16-Week-40.md
+++ b/_posts/Year 1/2020-11-16-Week-40.md
@@ -15,14 +15,9 @@ Traitor Among Us 1st Person POV.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/12C-UV5swGU-3TKvEgOM_edW1W4AX5MXG/view?usp=sharing">
 Traitor Among Us 3rd Person POV.pdf</a></p>
 
-Or view it below:
-Traitor Among Us 1st Person POV 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1MUVylc81GZUBlXmkQUEuQJMKBSVhCskx/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+Or view them below:
+Traitor Among Us 1st Person POV:
+<iframe src="https://drive.google.com/file/d/1MUVylc81GZUBlXmkQUEuQJMKBSVhCskx/preview" width="640" height="480" allow="autoplay"></iframe>
 
 Traitor Among Us 3rd Person POV: 
-<iframe
-src="https://drive.google.com/file/d/12C-UV5swGU-3TKvEgOM_edW1W4AX5MXG/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/12C-UV5swGU-3TKvEgOM_edW1W4AX5MXG/preview" width="640" height="480" allow="autoplay"></iframe>
