--- a/_posts/Year 1/2020-11-30-Week-42.md
+++ b/_posts/Year 1/2020-11-30-Week-42.md
@@ -5,11 +5,11 @@ author: Mohammad Khan
 category: [screenplay]
 tags: [screenplay, creative challenge]
 ---
-A hobo gives a fallen man the legs to stand. 
+A homeless man gives a fallen man the legs to stand. 
 
 Creative Challenge: 3 objects & 1 Genre
 - Genre: Tragedy
-- Make a story involving: A hobo named Paco, an ant named Doris, and a doorknob named Carl
+- Make a story involving: A homeless man named Paco, an ant named Doris, and a doorknob named Carl
 
 
 
@@ -18,7 +18,4 @@ Transcendence.pdf</a></p>
 
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1E6gwVTCcD13UyedxD3t-4xMu5B_-U9oe/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1E6gwVTCcD13UyedxD3t-4xMu5B_-U9oe/preview" width="640" height="480" allow="autoplay"></iframe>
