--- a/_posts/Year 2/2021-08-09-Week-78.md
+++ b/_posts/Year 2/2021-08-09-Week-78.md
@@ -25,7 +25,7 @@ Transference-Act 3.pdf</a></p>
 
 <p>View Full Script: </p>
 <a href="">
-Transference Full Script.pdf</a></p>
+Transference Full Script.pdf</a>
 
 Or view full script below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
