--- a/_posts/Year 1/2020-02-24-Week-2.md
+++ b/_posts/Year 1/2020-02-24-Week-2.md
@@ -14,9 +14,4 @@ The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
 
 <br>
 Or view it below:
-<!-- <embed src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-
-<iframe
-src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
-<br>
+<iframe src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/preview" width="640" height="480" allow="autoplay"></iframe>
