--- a/_posts/Year 1/2020-03-02-Week-3.md
+++ b/_posts/Year 1/2020-03-02-Week-3.md
@@ -12,7 +12,4 @@ tags: [screenplay]
 <a href="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing">The Mistake.pdf</a>
 
 Or view it below: 
-<iframe
-src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
-<!-- <embed src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/view?usp=sharing" width="800px" height="2100px" /> -->
+<iframe src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/preview" width="640" height="480" allow="autoplay"></iframe>
