--- a/_posts/Year 1/2020-03-30-Week-7.md
+++ b/_posts/Year 1/2020-03-30-Week-7.md
@@ -14,7 +14,4 @@ Two infectious disease experts deal with a deadly strain like no other.
 Hope in a Bottle.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/15K7vEGvHl6EJThw_yRt9GNcsaLSk3Bst/view?usp=sharing" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/15K7vEGvHl6EJThw_yRt9GNcsaLSk3Bst/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe> 
+<iframe src="https://drive.google.com/file/d/15K7vEGvHl6EJThw_yRt9GNcsaLSk3Bst/preview" width="640" height="480" allow="autoplay"></iframe>
