--- a/_posts/Year 1/2020-05-11-Week-13.md
+++ b/_posts/Year 1/2020-05-11-Week-13.md
@@ -8,8 +8,6 @@ tags: [memoir]
 Ramadan during the first year of COVID-19 pandemic 
 
 
-
-
 <p>Week 13: 05/11/2020:</p>
 - <p><a href="https://drive.google.com/file/d/1b8IgfYX3Ngvp8VqiCGzPr17fcOWXZsjK/view?usp=sharing">
 Ramadan 2020: 1st 10 days.pdf</a></p>
@@ -26,8 +24,4 @@ Ramadan 2020: 1st 10 days.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing">Ramadan 2020: complete series</a></p>
 
 Or view the compiled story below: 
-<!-- <embed src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
-
+<iframe src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/preview" width="640" height="480" allow="autoplay"></iframe>
