--- a/_posts/Year 1/2020-07-27-Week-24.md
+++ b/_posts/Year 1/2020-07-27-Week-24.md
@@ -9,13 +9,8 @@ A philanthropic man battles the nihilism of altruism.
 
 
 
-
-
 <p><a href="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing">
 An Eternal Problem.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/preview" width="640" height="480" allow="autoplay"></iframe>
