--- a/_posts/Year 1/2020-08-31-Week-29.md
+++ b/_posts/Year 1/2020-08-31-Week-29.md
@@ -15,7 +15,4 @@ Creative Challenge:Take the first 4 lines of William Blake's Auguries of Innocen
 To see a World in a Grain of Sand.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1Hv05tg9DTdQdVEQK659JQ2tabMcwrjnA/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1Hv05tg9DTdQdVEQK659JQ2tabMcwrjnA/preview" width="640" height="480" allow="autoplay"></iframe>
