--- a/_posts/Year 1/2020-09-21-Week-32.md
+++ b/_posts/Year 1/2020-09-21-Week-32.md
@@ -16,6 +16,4 @@ Eternity in an Hour.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1gBZCwkEXVYoTo_JV8-BPeC0zsWZysgf9/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1gBZCwkEXVYoTo_JV8-BPeC0zsWZysgf9/preview" width="640" height="480" allow="autoplay"></iframe>
