--- a/_posts/Year 1/2020-09-28-Week-33.md
+++ b/_posts/Year 1/2020-09-28-Week-33.md
@@ -14,7 +14,4 @@ A CEO's new invention that projects human potential and charts a path to humanit
 Ouroboros.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1Wu4OAvVePeKToFl8wZklqGkcjTC0oLH-/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1Wu4OAvVePeKToFl8wZklqGkcjTC0oLH-/preview" width="640" height="480" allow="autoplay"></iframe>
