--- a/_posts/Year 1/2020-10-05-Week-34.md
+++ b/_posts/Year 1/2020-10-05-Week-34.md
@@ -13,7 +13,4 @@ With an approaching asteroid that will wipe out all Martian life, two martains t
 Life on Mars.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1mp31bdLe7jwpr2jmOktwisB7uRWmZLdK/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1mp31bdLe7jwpr2jmOktwisB7uRWmZLdK/preview" width="640" height="480" allow="autoplay"></iframe>
