--- a/_posts/Year 1/2020-10-19-Week-36.md
+++ b/_posts/Year 1/2020-10-19-Week-36.md
@@ -10,12 +10,8 @@ Two soldiers on opposing sides of war find themselves stranded in a dense forest
 
 
 <p><a href="https://drive.google.com/file/d/1_PRJy_jiIRhrWrHRM9Db2OL5AMDtS7in/view?usp=sharing">
-Just some Guy.pdf</a></p>
+02:05.pdf</a></p>
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1_PRJy_jiIRhrWrHRM9Db2OL5AMDtS7in/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
-
+<iframe src="https://drive.google.com/file/d/1_PRJy_jiIRhrWrHRM9Db2OL5AMDtS7in/preview" width="640" height="480" allow="autoplay"></iframe>
 
