--- a/_posts/Year 1/2020-12-14-Week-44.md
+++ b/_posts/Year 1/2020-12-14-Week-44.md
@@ -13,7 +13,4 @@ Search Results.pdf</a></p>
 
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/18aojka_2Ff_FSGfCW8ZAn-py_oCSLXMx/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/18aojka_2Ff_FSGfCW8ZAn-py_oCSLXMx/preview" width="640" height="480" allow="autoplay"></iframe>
