--- a/_posts/Year 1/2020-12-21-Week-45.md
+++ b/_posts/Year 1/2020-12-21-Week-45.md
@@ -14,7 +14,4 @@ The World.pdf</a></p>
 
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1SGXYBc7_TXVXO67ZTjNXjLB-3_bmEoO8/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1SGXYBc7_TXVXO67ZTjNXjLB-3_bmEoO8/preview" width="640" height="480" allow="autoplay"></iframe>
