--- a/_posts/Year 1/2021-01-04-Week-47.md
+++ b/_posts/Year 1/2021-01-04-Week-47.md
@@ -17,7 +17,4 @@ Necessary Evil.pdf</a></p>
 
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1jxmqd8PpvLgwqUbQYDoesPW7U8yUdTCk/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1jxmqd8PpvLgwqUbQYDoesPW7U8yUdTCk/preview" width="640" height="480" allow="autoplay"></iframe>
