--- a/_posts/Year 1/2021-01-11-Week-48.md
+++ b/_posts/Year 1/2021-01-11-Week-48.md
@@ -13,6 +13,4 @@ Forgiveness.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1CvCt8bWWcYBmDrmOXyot9uGu22KS3kdz/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1CvCt8bWWcYBmDrmOXyot9uGu22KS3kdz/preview" width="640" height="480" allow="autoplay"></iframe>
