--- a/_posts/Year 1/2021-01-25-Week-50.md
+++ b/_posts/Year 1/2021-01-25-Week-50.md
@@ -13,6 +13,4 @@ Pain from an Old Wound.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe
-src="https://drive.google.com/file/d/1TWwYEFG0eVJis8tGi2HUu8L0Lu8vN20F/view?usp=sharing&embedded=true"
-style="width:718px; height:700px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/file/d/1TWwYEFG0eVJis8tGi2HUu8L0Lu8vN20F/preview" width="640" height="480" allow="autoplay"></iframe>
