added year tags

--- a/_posts/Year 1/2020-02-17-Week-1.md
+++ b/_posts/Year 1/2020-02-17-Week-1.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 1- Everything Has Beauty
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 <p>An Aberration of death walks among us and searches for someone who sees it.</p>
 
