--- a/_posts/Year 1/2020-02-24-Week-2.md
+++ b/_posts/Year 1/2020-02-24-Week-2.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 2- The Speech
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 <p>An influential person overcomes a stutter in dire times.</p>
 
