--- a/_posts/Year 1/2020-03-02-Week-3.md
+++ b/_posts/Year 1/2020-03-02-Week-3.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 3- The Mistake
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 <p>A scientist's mistake comes back to haunt him.</p>
 
