--- a/_posts/Year 1/2020-03-09-Week-4.md
+++ b/_posts/Year 1/2020-03-09-Week-4.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 4-6 - Stories of War
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 A single battle from 3 perspectives 
 
