--- a/_posts/Year 1/2020-04-06-Week-8.md
+++ b/_posts/Year 1/2020-04-06-Week-8.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 8- Evolution
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 Humans have been destroying mother nature for so long, she strikes back.
 
