--- a/_posts/Year 1/2020-04-13-Week-9.md
+++ b/_posts/Year 1/2020-04-13-Week-9.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 9-12 - The Paradigm Shift
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 In a dying world where disabled people are hunted and killed, an 8 year old boy looks for an escape.
 
