--- a/_posts/Year 1/2020-05-11-Week-13.md
+++ b/_posts/Year 1/2020-05-11-Week-13.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 13-16 - Ramadan 2020
 author: Mohammad Khan
 category: [Memoir]
-tags: [memoir]
+tags: [memoir, year 1]
 ---
 Ramadan during the first year of COVID-19 pandemic 
 
