--- a/_posts/Year 1/2020-06-08-Week-17.md
+++ b/_posts/Year 1/2020-06-08-Week-17.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 17-20 - Grievances of the Poor
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 How different levels of wealth deal with life's problems.
 
