--- a/_posts/Year 1/2020-07-06-Week-21.md
+++ b/_posts/Year 1/2020-07-06-Week-21.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 21- An Eternal Bond
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 Two beings, one cursed with life and one cursed with death, discover the meaning of their existence.
 
