--- a/_posts/Year 1/2020-07-20-Week-23.md
+++ b/_posts/Year 1/2020-07-20-Week-23.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 23- An Eternal Fear
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 With the death of his father, a married man struggles to reconcile with his past, present, and future.
 
