--- a/_posts/Year 1/2020-08-03-Week-25.md
+++ b/_posts/Year 1/2020-08-03-Week-25.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 25-28 - On the Other side of the Fence
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 Human race under the thumb of alien oppressors launches one last rebellion.
 
