--- a/_posts/Year 1/2020-08-31-Week-29.md
+++ b/_posts/Year 1/2020-08-31-Week-29.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 29- To see a World in a Grain of Sand
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story, creative challenge]
+tags: [short story, creative challenge, year 1]
 ---
 A middle school student struggles to see the interconnectedness of life.
 
