--- a/_posts/Year 1/2020-09-07-Week-30.md
+++ b/_posts/Year 1/2020-09-07-Week-30.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 30- A Heaven in a Wildflower
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story, creative challenge]
+tags: [short story, creative challenge, year 1]
 ---
 An old man struggles to come to terms with the loss of his wife.
 
