--- a/_posts/Year 1/2020-09-14-Week-31.md
+++ b/_posts/Year 1/2020-09-14-Week-31.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 31- Infinity in the Palm of your Hands
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story, creative challenge]
+tags: [short story, creative challenge, year 1]
 ---
 When the world's gone to crap, two brothers try to survive.
 
