--- a/_posts/Year 1/2020-09-21-Week-32.md
+++ b/_posts/Year 1/2020-09-21-Week-32.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 32- Eternity in an Hour
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story, creative challenge]
+tags: [short story, creative challenge, year 1]
 ---
 An ordinary man yearning for meaning falls into a temporarly frozen world.
 
