--- a/_posts/Year 1/2020-09-28-Week-33.md
+++ b/_posts/Year 1/2020-09-28-Week-33.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 33- Ouroboros
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 A CEO's new invention that projects human potential and charts a path to humanity flourishing backfires.
 
