--- a/_posts/Year 1/2020-10-12-Week-35.md
+++ b/_posts/Year 1/2020-10-12-Week-35.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 35- Superpower
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 In world of superpowered people, a normal person craves for power
 
