--- a/_posts/Year 1/2020-10-19-Week-36.md
+++ b/_posts/Year 1/2020-10-19-Week-36.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 36- 02:05
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 Two soldiers on opposing sides of war find themselves stranded in a dense forest with no hope of escape.
 
