--- a/_posts/Year 1/2020-10-26-Week-37.md
+++ b/_posts/Year 1/2020-10-26-Week-37.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 37- Just some Guy
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 An ordinary man stuck in an ordinary world looks for meaning for his existence.
 
