--- a/_posts/Year 1/2020-11-09-Week-39.md
+++ b/_posts/Year 1/2020-11-09-Week-39.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 39- Impact
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 A lone asteroid floating in space yearns to make an impact.
 
