--- a/_posts/Year 1/2020-11-16-Week-40.md
+++ b/_posts/Year 1/2020-11-16-Week-40.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 40- Traitor Among Us
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 6 crewmates trapped in a spaceship fight for their lives and sanity.
 
