--- a/_posts/Year 1/2020-11-23-Week-41.md
+++ b/_posts/Year 1/2020-11-23-Week-41.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 41- The World
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 In a world where everything is perfect, something must be wrong.
 
