--- a/_posts/Year 1/2020-11-30-Week-42.md
+++ b/_posts/Year 1/2020-11-30-Week-42.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 42- Transcendence
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay, creative challenge]
+tags: [screenplay, creative challenge, year 1]
 ---
 A homeless man gives a fallen man the legs to stand. 
 
