--- a/_posts/Year 1/2020-12-14-Week-44.md
+++ b/_posts/Year 1/2020-12-14-Week-44.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 44- Search Results
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 A story told through search results
 
