--- a/_posts/Year 1/2020-12-21-Week-45.md
+++ b/_posts/Year 1/2020-12-21-Week-45.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 45- The Two Doctors
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 Twins who became doctors battle a resilient unknown virus plauging their village.
 
