--- a/_posts/Year 1/2021-01-04-Week-47.md
+++ b/_posts/Year 1/2021-01-04-Week-47.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 47- Necessary Evil
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay, creative challenge]
+tags: [screenplay, creative challenge, year 1]
 ---
 "Unfortunately, for you, I am a necessary evil."
 
