--- a/_posts/Year 1/2021-01-11-Week-48.md
+++ b/_posts/Year 1/2021-01-11-Week-48.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 48- Forgiveness
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 A woman must overcome past demons to move forward.
 
