--- a/_posts/Year 1/2021-02-08-Week-52.md
+++ b/_posts/Year 1/2021-02-08-Week-52.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 52- A Year of Weekly Stories
 author: Mohammad Khan
 category: [Memoir]
-tags: [memoir]
+tags: [memoir, year 1]
 ---
 Reflection on writing weekly stories/screenplays for 1 year.
 
