--- a/_posts/Year 2/2021-02-15-Week-53.md
+++ b/_posts/Year 2/2021-02-15-Week-53.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 53- Writer's Block
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 ...can't think of anything for this one.
 
