--- a/_posts/Year 2/2021-02-22-Week-54.md
+++ b/_posts/Year 2/2021-02-22-Week-54.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 54- The Transmogrification
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 A young boy wakes up as a doughnut...now what?
 
