--- a/_posts/Year 2/2021-03-01-Week-55.md
+++ b/_posts/Year 2/2021-03-01-Week-55.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 55- The Moose
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 2]
 ---
 <p>A deputy marshall discovers a strange character stranded in a blizzard.</p>
 
