--- a/_posts/Year 2/2021-03-15-Week-57.md
+++ b/_posts/Year 2/2021-03-15-Week-57.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 57-60 - Bitter Work
 author: Mohammad Khan
 category: [Memoir]
-tags: [memoir]
+tags: [memoir, year 2]
 ---
 A look into Workaholism
 
