--- a/_posts/Year 2/2021-04-12-Week-61.md
+++ b/_posts/Year 2/2021-04-12-Week-61.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 61-64 - Archives
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 Two friends send letters to each other during an apocalypse
 
