--- a/_posts/Year 2/2021-05-10-Week-65.md
+++ b/_posts/Year 2/2021-05-10-Week-65.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 65- The Dummy
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 A crash test Dummy searches for meaning.
 
