--- a/_posts/Year 2/2021-05-24-Week-67.md
+++ b/_posts/Year 2/2021-05-24-Week-67.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 67- Phantom Flight
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 2]
 ---
 <p>Limited time to deliver medicine to an island nation before it goes bad.</p>
 
