--- a/_posts/Year 2/2021-05-31-Week-68.md
+++ b/_posts/Year 2/2021-05-31-Week-68.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 68- In the Dark
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 NASA's 50th rover mission turns up a peculiar discovery.
 
