--- a/_posts/Year 2/2021-07-05-Week-73.md
+++ b/_posts/Year 2/2021-07-05-Week-73.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 73- Food Therapy-Pasta
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 Sentient pasta gives life advice.
 
