--- a/_posts/Year 2/2021-07-12-Week-74.md
+++ b/_posts/Year 2/2021-07-12-Week-74.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 74- Heartbeats
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 A counter displays the number of heartbeats you have left.
 
