--- a/_posts/Year 2/2021-08-02-Week-77.md
+++ b/_posts/Year 2/2021-08-02-Week-77.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 77- Karoshi
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 Karoshi:which can be translated literally as "overwork death"
 
