--- a/_posts/Year 2/2021-08-09-Week-78.md
+++ b/_posts/Year 2/2021-08-09-Week-78.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 78-81 - Transference
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 2]
 ---
 A group of 12 high school students desire to make a movie in a world that smothers any form of public creative expression.
 
