--- a/_posts/Year 1/2020-03-30-Week-7.md
+++ b/_posts/Year 1/2020-03-30-Week-7.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 7-Hope in a Bottle
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 Two infectious disease experts deal with a deadly strain like no other.
 
