--- a/_posts/Year 1/2020-07-13-Week-22.md
+++ b/_posts/Year 1/2020-07-13-Week-22.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 22- An Eternal Problem
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 A historian chases myths of a dessert library of infinite knowledge.
 
