--- a/_posts/Year 1/2020-07-27-Week-24.md
+++ b/_posts/Year 1/2020-07-27-Week-24.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 24- An Eternal Struggle
 author: Mohammad Khan
 category: [Screenplay]
-tags: [screenplay]
+tags: [screenplay, year 1]
 ---
 A philanthropic man battles the nihilism of altruism.
 
