--- a/_posts/Year 1/2020-10-05-Week-34.md
+++ b/_posts/Year 1/2020-10-05-Week-34.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 34- Life on Mars
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 With an approaching asteroid that will wipe out all Martian life, two martains take drastic measures.
 
