--- a/_posts/Year 1/2020-11-02-Week-38.md
+++ b/_posts/Year 1/2020-11-02-Week-38.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 38- 25 to Go
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 A prisoner's final 25 words.
 
