--- a/_posts/Year 1/2020-12-07-Week-43.md
+++ b/_posts/Year 1/2020-12-07-Week-43.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 43- ABSURD
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 An abusrd story of an absurd world with abusrd motives. 
 
