--- a/_posts/Year 1/2020-12-28-Week-46.md
+++ b/_posts/Year 1/2020-12-28-Week-46.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 46- The Pen
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay, creative challenge]
+tags: [screenplay, creative challenge, year 1]
 ---
 "I just wanted a pen."
 
