--- a/_posts/Year 1/2021-01-18-Week-49.md
+++ b/_posts/Year 1/2021-01-18-Week-49.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 49- I have become Death
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 The man who made the weapons reflects as they are fired upon him and his people.
 
