--- a/_posts/Year 1/2021-01-25-Week-50.md
+++ b/_posts/Year 1/2021-01-25-Week-50.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 50- Pain from an Old Wound
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 The important parts are only realized once we lose them
 
