--- a/_posts/Year 1/2021-02-01-Week-51.md
+++ b/_posts/Year 1/2021-02-01-Week-51.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 51- The Last Story
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 1]
 ---
 Humanity has been gone for eons. What is their last story?
 
