--- a/_posts/Year 2/2021-03-08-Week-56.md
+++ b/_posts/Year 2/2021-03-08-Week-56.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 56- Miles Gray
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 2]
 ---
 <p>A writer becomes engrossed in his story</p>
 
