--- a/_posts/Year 2/2021-05-17-Week-66.md
+++ b/_posts/Year 2/2021-05-17-Week-66.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 66- The Cessna 172 Commerical
 author: Mohammad Khan
 category: [screenplay]
-tags: [screenplay]
+tags: [screenplay, year 2]
 ---
 <p>A commercial for the cessna 172</p>
 
