--- a/_posts/Year 2/2021-06-07-Week-69.md
+++ b/_posts/Year 2/2021-06-07-Week-69.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 69-72 - Accolades
 author: Mohammad Khan
 category: [short story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 Epitaphs of ghosts
 
