--- a/_posts/Year 2/2021-07-19-Week-75.md
+++ b/_posts/Year 2/2021-07-19-Week-75.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 75- Future Reflections- The Lantern
 author: Mohammad Khan
 category: [Memoir]
-tags: [short story, memoir]
+tags: [short story, memoir, year 2]
 ---
 A letter to your future self.
 
