--- a/_posts/Year 2/2021-07-26-Week-76.md
+++ b/_posts/Year 2/2021-07-26-Week-76.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 76- The Gray Ghost
 author: Mohammad Khan
 category: [Short Story]
-tags: [short story]
+tags: [short story, year 2]
 ---
 An android makes a choice for itself.
 
