--- a/_posts/Year 2/2021-09-06-Week-82.md
+++ b/_posts/Year 2/2021-09-06-Week-82.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 82- Future Reflections- Light and Dark
 author: Mohammad Khan
 category: [Memoir]
-tags: [short story, memoir]
+tags: [short story, memoir, year 2]
 ---
 A letter to your future self
 
