--- a/_posts/Year 2/2021-08-02-Week-77.md
+++ b/_posts/Year 2/2021-08-02-Week-77.md
@@ -1,18 +1,17 @@
 ---
 layout: post
-title: Week 77- Karoshi
+title: Week 77- Karōshi
 author: Mohammad Khan
 category: [Short Story]
 tags: [short story, year 2]
 ---
-Karoshi:which can be translated literally as "overwork death"
+Karōshi:which can be translated literally as "overwork death"
 
 
 
 <p><a href="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/view?usp=sharing">
-Karoshi.pdf</a></p>
+Karōshi.pdf</a></p>
 
 
 Or view it below: 
-<!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 <iframe src="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/preview" width="640" height="480" allow="autoplay"></iframe>
