added Transference script

--- a/_posts/Year 2/2021-08-09-Week-78.md
+++ b/_posts/Year 2/2021-08-09-Week-78.md
@@ -20,14 +20,12 @@ Transference-Act 1.pdf</a></p>
 Transference-Act 2.pdf</a></p>
 
 <p>Week 81: 08/30/2021: Transference - Act 3.</p>
-- <p><a href="">
+- <p><a href="https://drive.google.com/file/d/15ieZhFHWafC7jH_iiCwmgWKsZgk0RVwx/view?usp=sharing">
 Transference-Act 3.pdf</a></p>
 
-<p>View Full Script: </p>
-<a href="">
-Transference Full Script.pdf</a>
 
 Or view full script below: 
+<iframe src="https://drive.google.com/file/d/15ieZhFHWafC7jH_iiCwmgWKsZgk0RVwx/preview" width="640" height="480" allow="autoplay"></iframe>
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 <!-- <iframe
 src="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/view?usp=sharing&embedded=true"
