--- a/_posts/Year 2/2021-09-06-Week-82.md
+++ b/_posts/Year 2/2021-09-06-Week-82.md
@@ -17,6 +17,6 @@ Or view it below:
 <!-- <embed src="https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 
 
-<iframe src="{https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/preview#view=fitH}" width="64%" height="48%" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/preview#view=fitH" width="64%" height="48%" allow="autoplay"></iframe>
 
 <!-- <iframe src={`${testPdf}#view=fitH`} title="testPdf" height="100%" width="100%" /> -->
