--- a/_posts/Year 2/2021-08-09-Week-78.md
+++ b/_posts/Year 2/2021-08-09-Week-78.md
@@ -25,7 +25,7 @@ Transference-Act 3.pdf</a></p>
 
 
 Or view full script below: 
-<iframe src="https://drive.google.com/file/d/15ieZhFHWafC7jH_iiCwmgWKsZgk0RVwx/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/15ieZhFHWafC7jH_iiCwmgWKsZgk0RVwx/preview#view=fitH" width="100%" height="480" allow="autoplay"></iframe>
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 <!-- <iframe
 src="https://drive.google.com/file/d/1mdzXiCAwc6Eh8ZlTLng51c6LfjRRZqy1/view?usp=sharing&embedded=true"
