--- a/_posts/Year 2/2021-03-01-Week-55.md
+++ b/_posts/Year 2/2021-03-01-Week-55.md
@@ -13,4 +13,4 @@ tags: [screenplay, year 2]
 The Moose.pdf</a>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1wMJs3rhqck5kbpss4WYzYo1bjG7oFO-e/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1wMJs3rhqck5kbpss4WYzYo1bjG7oFO-e/preview" width="100%" height="480" allow="autoplay"></iframe>
