--- a/_posts/Year 2/2021-03-08-Week-56.md
+++ b/_posts/Year 2/2021-03-08-Week-56.md
@@ -13,4 +13,4 @@ tags: [screenplay, year 2]
 Miles Gray.pdf</a>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1KMgJTqy9vSR51rSF715qUl8Xs5TUhQbP/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1KMgJTqy9vSR51rSF715qUl8Xs5TUhQbP/preview" width="100%" height="480" allow="autoplay"></iframe>
