--- a/_posts/Year 2/2021-03-15-Week-57.md
+++ b/_posts/Year 2/2021-03-15-Week-57.md
@@ -28,4 +28,4 @@ Bitter Work complete story.pdf</a></p>
 
 Or view the compiled story below: 
 <!-- <embed src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1INkRoI_oPlyxbBqTNUnG0mh4QYkuY025/preview" width="100%" height="480" allow="autoplay"></iframe>
