--- a/_posts/Year 2/2021-04-12-Week-61.md
+++ b/_posts/Year 2/2021-04-12-Week-61.md
@@ -29,4 +29,4 @@ Archives Complete Story.pdf</a></p>
 
 Or view the compiled story below: 
 <!-- <embed src="https://drive.google.com/file/d/1ICEiEsziE3TYqeHpnmsZYxw7O0DCZp4E/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe src="https://drive.google.com/file/d/1ICEiEsziE3TYqeHpnmsZYxw7O0DCZp4E/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1ICEiEsziE3TYqeHpnmsZYxw7O0DCZp4E/preview" width="100%" height="480" allow="autoplay"></iframe>
