--- a/_posts/Year 2/2021-05-10-Week-65.md
+++ b/_posts/Year 2/2021-05-10-Week-65.md
@@ -14,4 +14,4 @@ The Dummy.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1PLf8f5-tIxYLJpoP-SqapwvPG10CJVM-/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1PLf8f5-tIxYLJpoP-SqapwvPG10CJVM-/preview" width="100%" height="480" allow="autoplay"></iframe>
