--- a/_posts/Year 2/2021-05-17-Week-66.md
+++ b/_posts/Year 2/2021-05-17-Week-66.md
@@ -13,4 +13,4 @@ tags: [screenplay, year 2]
 Cessna 172 commercial.pdf</a>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1TtY4mGWk0x6qIkGpHr1eNrMA7QUE9S_E/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1TtY4mGWk0x6qIkGpHr1eNrMA7QUE9S_E/preview" width="100%" height="480" allow="autoplay"></iframe>
