--- a/_posts/Year 2/2021-05-24-Week-67.md
+++ b/_posts/Year 2/2021-05-24-Week-67.md
@@ -13,4 +13,4 @@ tags: [screenplay, year 2]
 Phantom Flight.pdf</a>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1kM5kZnwAZ4TJblHRQ0Pa89lRcC7xiULv/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1kM5kZnwAZ4TJblHRQ0Pa89lRcC7xiULv/preview" width="100%" height="480" allow="autoplay"></iframe>
