--- a/_posts/Year 2/2021-07-12-Week-74.md
+++ b/_posts/Year 2/2021-07-12-Week-74.md
@@ -17,4 +17,4 @@ Heartbeats.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe src="https://drive.google.com/file/d/1P_aAJ10evyKKEw-tP1cG5cwRAJUanw9g/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1P_aAJ10evyKKEw-tP1cG5cwRAJUanw9g/preview" width="100%" height="480" allow="autoplay"></iframe>
