--- a/_posts/Year 2/2021-07-19-Week-75.md
+++ b/_posts/Year 2/2021-07-19-Week-75.md
@@ -15,4 +15,4 @@ Future Reflections-The Lantern.pdf</a></p>
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 
-<iframe src="https://drive.google.com/file/d/1lg2NQN4zqDKiwSBUhmnIEwrrmD58SGYT/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1lg2NQN4zqDKiwSBUhmnIEwrrmD58SGYT/preview" width="100%" height="480" allow="autoplay"></iframe>
