year 1 stories should have responsive PDFs

--- a/_posts/Year 1/2020-03-02-Week-3.md
+++ b/_posts/Year 1/2020-03-02-Week-3.md
@@ -13,4 +13,4 @@ tags: [screenplay, year 1]
 The Mistake.pdf</a>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/17NUrx-D6QDLhKm6a1SzZeTFGETzdUNBT/preview" width="100%" height="480" allow="autoplay"></iframe>
