--- a/_posts/Year 1/2020-07-06-Week-21.md
+++ b/_posts/Year 1/2020-07-06-Week-21.md
@@ -14,4 +14,4 @@ Two beings, one cursed with life and one cursed with death, discover the meaning
 An Eternal Bond.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1F2p9pU7tBrMzrqjnbDh75dUB618VML-l/preview" width="100%" height="480" allow="autoplay"></iframe>
