--- a/_posts/Year 1/2020-08-03-Week-25.md
+++ b/_posts/Year 1/2020-08-03-Week-25.md
@@ -28,4 +28,4 @@ On the Other Side of the Fence: Act 3: Broken Mirrors.pdf</a></p>
 On the Other Side of the Fence complete script.pdf</a></p>
 
 Or view the compiled story below: 
-<iframe src="https://drive.google.com/file/d/1epD_4j4VIFt9nllijQQSII6bgvTMqXt9/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1epD_4j4VIFt9nllijQQSII6bgvTMqXt9/preview" width="100%" height="480" allow="autoplay"></iframe>
