--- a/_posts/Year 1/2020-11-09-Week-39.md
+++ b/_posts/Year 1/2020-11-09-Week-39.md
@@ -12,4 +12,4 @@ A lone asteroid floating in space yearns to make an impact.
 Impact.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1t2ydE8CzL9feRxN9b22nton036IEhg9J/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1t2ydE8CzL9feRxN9b22nton036IEhg9J/preview" width="100%" height="480" allow="autoplay"></iframe>
