--- a/_posts/Year 1/2020-11-16-Week-40.md
+++ b/_posts/Year 1/2020-11-16-Week-40.md
@@ -17,7 +17,7 @@ Traitor Among Us 3rd Person POV.pdf</a></p>
 
 Or view them below:
 Traitor Among Us 1st Person POV:
-<iframe src="https://drive.google.com/file/d/1MUVylc81GZUBlXmkQUEuQJMKBSVhCskx/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1MUVylc81GZUBlXmkQUEuQJMKBSVhCskx/preview" width="100%" height="480" allow="autoplay"></iframe>
 
 Traitor Among Us 3rd Person POV: 
-<iframe src="https://drive.google.com/file/d/12C-UV5swGU-3TKvEgOM_edW1W4AX5MXG/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/12C-UV5swGU-3TKvEgOM_edW1W4AX5MXG/preview" width="100%" height="480" allow="autoplay"></iframe>
