--- a/_posts/Year 1/2020-12-14-Week-44.md
+++ b/_posts/Year 1/2020-12-14-Week-44.md
@@ -13,4 +13,4 @@ Search Results.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/18aojka_2Ff_FSGfCW8ZAn-py_oCSLXMx/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/18aojka_2Ff_FSGfCW8ZAn-py_oCSLXMx/preview" width="100%" height="480" allow="autoplay"></iframe>
