--- a/_posts/Year 1/2020-12-21-Week-45.md
+++ b/_posts/Year 1/2020-12-21-Week-45.md
@@ -14,4 +14,4 @@ The Two Doctors.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1SGXYBc7_TXVXO67ZTjNXjLB-3_bmEoO8/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1SGXYBc7_TXVXO67ZTjNXjLB-3_bmEoO8/preview" width="100%" height="480" allow="autoplay"></iframe>
