--- a/_posts/Year 1/2020-02-17-Week-1.md
+++ b/_posts/Year 1/2020-02-17-Week-1.md
@@ -13,5 +13,5 @@ Everything Has Beauty.pdf </a>
 
 
 Or view below:
-<iframe src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1e84QZkJCAxN5A-_vm2wxg9brhbet3KCy/preview" width="100%" height="480" allow="autoplay"></iframe>
 
