--- a/_posts/Year 1/2020-02-24-Week-2.md
+++ b/_posts/Year 1/2020-02-24-Week-2.md
@@ -14,4 +14,4 @@ The Speech.pdf </a>	<!-- <img src="images/marr_pic.jpg" alt=""></a> -->
 
 <br>
 Or view it below:
-<iframe src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1ZbXo9n7klvNHsYhGdSxttxLEEyuhfux_/preview" width="100%" height="480" allow="autoplay"></iframe>
