--- a/_posts/Year 1/2020-03-09-Week-4.md
+++ b/_posts/Year 1/2020-03-09-Week-4.md
@@ -21,4 +21,4 @@ A single battle from 3 perspectives
 <p>Compiled 3 scripts</p><p><a href="https://drive.google.com/file/d/1D6gAjqNogWqfy9LkVRxnLoPnwVSeo_na/view?usp=sharing">Stories of War PDF</a></p>	
 
 Or view the compiled script below: 
-<iframe src="https://drive.google.com/file/d/1D6gAjqNogWqfy9LkVRxnLoPnwVSeo_na/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1D6gAjqNogWqfy9LkVRxnLoPnwVSeo_na/preview" width="100%" height="480" allow="autoplay"></iframe>
