--- a/_posts/Year 1/2020-03-30-Week-7.md
+++ b/_posts/Year 1/2020-03-30-Week-7.md
@@ -14,4 +14,4 @@ Two infectious disease experts deal with a deadly strain like no other.
 Hope in a Bottle.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/15K7vEGvHl6EJThw_yRt9GNcsaLSk3Bst/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/15K7vEGvHl6EJThw_yRt9GNcsaLSk3Bst/preview" width="100%" height="480" allow="autoplay"></iframe>
