--- a/_posts/Year 1/2020-04-06-Week-8.md
+++ b/_posts/Year 1/2020-04-06-Week-8.md
@@ -12,4 +12,4 @@ Humans have been destroying mother nature for so long, she strikes back.
 Evolution.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1ERz6nUwUot7On5krygSk9ZaMWbAURNUW/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1ERz6nUwUot7On5krygSk9ZaMWbAURNUW/preview" width="100%" height="480" allow="autoplay"></iframe>
