--- a/_posts/Year 1/2020-04-13-Week-9.md
+++ b/_posts/Year 1/2020-04-13-Week-9.md
@@ -23,4 +23,4 @@ The Paradigm Shift: Prologue.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/view?usp=sharing">The Paradigm Shift Complete PDF</a></p>
 
 Or view the complete story below: 
-<iframe src="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1pBaHD12qBnrOQJsq-U2_j-BeSPZviKIQ/preview" width="100%" height="480" allow="autoplay"></iframe>
