--- a/_posts/Year 1/2020-05-11-Week-13.md
+++ b/_posts/Year 1/2020-05-11-Week-13.md
@@ -24,4 +24,4 @@ Ramadan 2020: 1st 10 days.pdf</a></p>
 <p><a href="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/view?usp=sharing">Ramadan 2020: complete series</a></p>
 
 Or view the compiled story below: 
-<iframe src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1rMvpFyCexVpenq3MAkPuH-r5AGF8nbBk/preview" width="100%" height="480" allow="autoplay"></iframe>
