--- a/_posts/Year 1/2020-07-13-Week-22.md
+++ b/_posts/Year 1/2020-07-13-Week-22.md
@@ -15,4 +15,4 @@ A historian chases myths of a dessert library of infinite knowledge.
 An Eternal Problem.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1Va3RcCiOmqQA5vbvwXe56eZSf7cF3l_L/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1Va3RcCiOmqQA5vbvwXe56eZSf7cF3l_L/preview" width="100%" height="480" allow="autoplay"></iframe>
