--- a/_posts/Year 1/2020-07-20-Week-23.md
+++ b/_posts/Year 1/2020-07-20-Week-23.md
@@ -15,4 +15,4 @@ With the death of his father, a married man struggles to reconcile with his past
 An Eternal Fear.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1pRlrxqeYXopdAoTSUn9hemOeCSV3eRvy/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1pRlrxqeYXopdAoTSUn9hemOeCSV3eRvy/preview" width="100%" height="480" allow="autoplay"></iframe>
