--- a/_posts/Year 1/2020-07-27-Week-24.md
+++ b/_posts/Year 1/2020-07-27-Week-24.md
@@ -13,4 +13,4 @@ A philanthropic man battles the nihilism of altruism.
 An Eternal Problem.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/preview" width="100%" height="480" allow="autoplay"></iframe>
