--- a/_posts/Year 1/2020-09-07-Week-30.md
+++ b/_posts/Year 1/2020-09-07-Week-30.md
@@ -15,4 +15,4 @@ Creative Challenge:Take the first 4 lines of William Blake's Auguries of Innocen
 A Heaven in a Wildflower.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/164xo2OVyOiHG3uMf4t7J1fTd5zRqbppA/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/164xo2OVyOiHG3uMf4t7J1fTd5zRqbppA/preview" width="100%" height="480" allow="autoplay"></iframe>
