--- a/_posts/Year 1/2020-09-28-Week-33.md
+++ b/_posts/Year 1/2020-09-28-Week-33.md
@@ -14,4 +14,4 @@ A CEO's new invention that projects human potential and charts a path to humanit
 Ouroboros.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1Wu4OAvVePeKToFl8wZklqGkcjTC0oLH-/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1Wu4OAvVePeKToFl8wZklqGkcjTC0oLH-/preview" width="100%" height="480" allow="autoplay"></iframe>
