--- a/_posts/Year 1/2020-10-05-Week-34.md
+++ b/_posts/Year 1/2020-10-05-Week-34.md
@@ -13,4 +13,4 @@ With an approaching asteroid that will wipe out all Martian life, two martains t
 Life on Mars.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1mp31bdLe7jwpr2jmOktwisB7uRWmZLdK/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1mp31bdLe7jwpr2jmOktwisB7uRWmZLdK/preview" width="100%" height="480" allow="autoplay"></iframe>
