--- a/_posts/Year 1/2020-10-12-Week-35.md
+++ b/_posts/Year 1/2020-10-12-Week-35.md
@@ -12,4 +12,4 @@ In world of superpowered people, a normal person craves for power
 Superpower.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1BVOCaNDJIsEXDHwhSXVKZ2DZ0lyUd9hF/preview" width="100%" height="480" allow="autoplay"></iframe>
