--- a/_posts/Year 1/2020-10-19-Week-36.md
+++ b/_posts/Year 1/2020-10-19-Week-36.md
@@ -13,5 +13,5 @@ Two soldiers on opposing sides of war find themselves stranded in a dense forest
 02:05.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1_PRJy_jiIRhrWrHRM9Db2OL5AMDtS7in/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1_PRJy_jiIRhrWrHRM9Db2OL5AMDtS7in/preview" width="100%" height="480" allow="autoplay"></iframe>
 
