--- a/_posts/Year 1/2020-10-26-Week-37.md
+++ b/_posts/Year 1/2020-10-26-Week-37.md
@@ -12,4 +12,4 @@ An ordinary man stuck in an ordinary world looks for meaning for his existence.
 Just Some Guy.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1OhBPw90csiGjkwbhcw_K54oioeT5RNrd/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1OhBPw90csiGjkwbhcw_K54oioeT5RNrd/preview" width="100%" height="480" allow="autoplay"></iframe>
