--- a/_posts/Year 1/2020-11-02-Week-38.md
+++ b/_posts/Year 1/2020-11-02-Week-38.md
@@ -14,4 +14,4 @@ A prisoner's final 25 words.
 25 to Go.pdf</a></p>
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1HCKZO5Ww7VWnDKlOt0xh9FxAgzjUZH8w/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1HCKZO5Ww7VWnDKlOt0xh9FxAgzjUZH8w/preview" width="100%" height="480" allow="autoplay"></iframe>
