--- a/_posts/Year 1/2020-11-23-Week-41.md
+++ b/_posts/Year 1/2020-11-23-Week-41.md
@@ -15,4 +15,4 @@ The World.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1flfJbQ6C6TL1EesOI7AVVBcnTtRauLzb/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1flfJbQ6C6TL1EesOI7AVVBcnTtRauLzb/preview" width="100%" height="480" allow="autoplay"></iframe>
