--- a/_posts/Year 1/2020-11-30-Week-42.md
+++ b/_posts/Year 1/2020-11-30-Week-42.md
@@ -18,4 +18,4 @@ Transcendence.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1E6gwVTCcD13UyedxD3t-4xMu5B_-U9oe/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1E6gwVTCcD13UyedxD3t-4xMu5B_-U9oe/preview" width="100%" height="480" allow="autoplay"></iframe>
