--- a/_posts/Year 1/2021-01-04-Week-47.md
+++ b/_posts/Year 1/2021-01-04-Week-47.md
@@ -17,4 +17,4 @@ Necessary Evil.pdf</a></p>
 
 
 Or view it below: 
-<iframe src="https://drive.google.com/file/d/1jxmqd8PpvLgwqUbQYDoesPW7U8yUdTCk/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1jxmqd8PpvLgwqUbQYDoesPW7U8yUdTCk/preview" width="100%" height="480" allow="autoplay"></iframe>
