--- a/_posts/Year 1/2021-02-01-Week-51.md
+++ b/_posts/Year 1/2021-02-01-Week-51.md
@@ -14,4 +14,4 @@ The Last Story.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe src="https://drive.google.com/file/d/1SvUrO-mKVt2LY0fETAaLD5Q8gMGJoI78/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1SvUrO-mKVt2LY0fETAaLD5Q8gMGJoI78/preview" width="100%" height="480" allow="autoplay"></iframe>
