--- a/_posts/Year 1/2021-02-08-Week-52.md
+++ b/_posts/Year 1/2021-02-08-Week-52.md
@@ -13,4 +13,4 @@ A Year of Weekly Stories.pdf</a></p>
 
 Or view it below: 
 <!-- <embed src="https://drive.google.com/file/d/1mrL8nISYXGzBGAjVw-4hgwagVCEkNMaT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
-<iframe src="https://drive.google.com/file/d/1rvhRve-cZ3OEzfPN8uDLn5S9tWWFjcE0/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1rvhRve-cZ3OEzfPN8uDLn5S9tWWFjcE0/preview" width="100%" height="480" allow="autoplay"></iframe>
