trying star rating system

--- a/_posts/Year 2/2021-09-06-Week-82.md
+++ b/_posts/Year 2/2021-09-06-Week-82.md
@@ -7,13 +7,17 @@ tags: [short story, memoir, year 2]
 ---
 A letter to your future self
 
-<link rel="stylesheet" href="../assets/css/applause-button.css" />
+<!-- <link rel="stylesheet" href="../assets/css/applause-button.css" />
  <script src="applause-button.js"></script>
- <body>
+ <body> -->
   <!-- add the button! -->
-  <applause-button color = "#ffffff" style="width: 58px; height: 58px;"/>
+<!--   <applause-button color = "#ffffff" style="width: 58px; height: 58px;"/>
 </body>  
+ -->
 
+ {% include star-rating.html rating=2 %}
+
+ 
 <p><a href="https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/view?usp=sharing">
 Future Reflections-Light and Dark.pdf</a></p>
 
