Removed star system, added comments

--- a/_posts/Year 2/2021-09-06-Week-82.md
+++ b/_posts/Year 2/2021-09-06-Week-82.md
@@ -15,8 +15,8 @@ A letter to your future self
 </body>  
  -->
 
- {% include star-rating.html rating=2 %}
-
+<!--  {% include star-rating.html rating=2 %}
+ -->
  
 <p><a href="https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/view?usp=sharing">
 Future Reflections-Light and Dark.pdf</a></p>
