fixing links to week 84

--- a/_posts/Year 2/2021-09-20-Week-84.md
+++ b/_posts/Year 2/2021-09-20-Week-84.md
@@ -8,21 +8,21 @@ tags: [screenplay, year 2]
 Everything comes with a price. All that matters is how much are you willing to pay?
 
 <p>Week 84: 09/20/2021: Profit Margins - Teaser.</p>
-- <p><a href="">
+- <p><!-- <a href=""> -->
 Profit Margins -Teaser.pdf</a></p>
 
 <p>Week 85: 09/27/2021: Profit Margins - Act 1.</p>
-- <p><a href="">
+- <p><!-- <a href=""> -->
 Profit Margins -Act 1.pdf</a></p>
 
 <p>Week 86: 10/04/2021: Profit Margins - Act 2.</p>
-- <p><a href="">
+- <p><!-- <a href=""> -->
 Profit Margins -Act 2.pdf</a></p>
 
 <p>Week 87: 10/11/2021: Profit Margins - Act 3.</p>
-- <p><a href="">
+- <p><!-- <a href=""> -->
 Profit Margins -Act 3.pdf</a></p>
 
 
 Or view full script below: 
-<iframe src="" width="100%" height="480" allow="autoplay"></iframe>
+<!-- <iframe src="" width="100%" height="480" allow="autoplay"></iframe> -->
