--- a/_posts/Year 2/2021-11-01-Week-90.md
+++ b/_posts/Year 2/2021-11-01-Week-90.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 90 -  The Observer:: The Self
+title: Week 90 -  The Observer-The Self
 author: Mohammad Khan
 category: [The Observer]
 tags: [The Observer, year 2]
