made width of poems responsive

--- a/_posts/Year 2/2021-10-18-Week-88.md
+++ b/_posts/Year 2/2021-10-18-Week-88.md
@@ -7,4 +7,4 @@ tags: [poem, year 2]
 ---
 A poem on Awareness.
 
-<iframe src="https://drive.google.com/file/d/19YEavXeDjMrDgQLV7frP2JrrvEnE0RZ8/preview" width="100%" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/19YEavXeDjMrDgQLV7frP2JrrvEnE0RZ8/preview" width="100%" height="100%" allow="autoplay"></iframe>
