Updated week 25 spelling

--- a/_posts/Year 1/2020-08-03-Week-25.md
+++ b/_posts/Year 1/2020-08-03-Week-25.md
@@ -5,7 +5,7 @@ author: Mohammad Khan
 category: [Screenplay]
 tags: [screenplay, year 1]
 ---
-Human race under the thumb of alien oppressors launches one last rebellion.
+Human race under the thumb of alien oppressors launch one last rebellion.
 
 
 <p>Week 25: 08/03/2020:</p>
