Week 45 spelling change

--- a/_posts/Year 1/2020-12-21-Week-45.md
+++ b/_posts/Year 1/2020-12-21-Week-45.md
@@ -5,7 +5,7 @@ author: Mohammad Khan
 category: [Short Story]
 tags: [short story, year 1]
 ---
-Twins who became doctors battle a resilient unknown virus plauging their village.
+Twins who became doctors battle a resilient unknown virus plaguing their village.
 
 
 
